--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-htmlacademy": "9.1.1",
     "vite": "4.4.9"
   },
+  "type" : "module",
   "license": "MIT",
   "scripts": {
     "start": "vite --port 3000 --open",
